Refactor JS,HTML,CSS

--- a/cssLearn/testHtml.html
+++ b/cssLearn/testHtml.html
@@ -17,6 +17,19 @@
             );
         });
     </script>
+
+    <script>
+        $(document).ready(function () {
+            $("button").click(function () {
+                var div = $("#mId");
+                div.animate({height: '300px', opacity: '0.4'}, "slow");
+                div.animate({width: '300px', opacity: '0.8'}, "slow");
+                div.animate({height: '100px', opacity: '0.4'}, "slow");
+                div.animate({width: '100px', opacity: '0.8'}, "slow");
+            });
+        });
+    </script>
+
 </head>
 <body>
 
