重构了主页代码,朋友这一栏出错了

--- a/friends/addFriends.html
+++ b/friends/addFriends.html
@@ -17,8 +17,7 @@
 <div class="">
     <h3>在下面添加你的信息哦</h3>
     <div class="horizontalLine"></div>
-    <form action="addFriends.php" method="post" onsubmit="return checkInput(this)"
-          enctype="multipart/form-data">
+    <form action="addFriends.php" method="post" enctype="multipart/form-data" onsubmit="return checkInput(this)">
         <input name="mName" type="text" placeholder="姓名">
         <input name="mRelation" type="text" placeholder="你是我的什么">
         <input type="file" name="mFile" placeholder="你的照片">
